Fix links for headings and paragraph spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,7 +37,7 @@
     @apply text-2xl font-bold leading-9 mt-4;
   }
   p {
-    @apply text-base
+    @apply text-base my-4
   }
   code {
     @apply my-3 rounded-md;
